--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div id="logo-2">
                 <a href="index.html" id="logo2">
-                    <img src="../img/logo_200.png" id="logo2" alt="logo_mobile">
+                    <img src="img/logo_200.png" id="logo2" alt="logo_mobile">
                 </a>
             </div>
 
